Changed classification condition

--- a/Song Popularity Growth Prediction.ipynb
+++ b/Song Popularity Growth Prediction.ipynb
@@ -2333,7 +2333,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x21c5a0be710>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x274ef9a6908>"
       ]
      },
      "execution_count": 19,
@@ -3266,7 +3266,7 @@
        "      <td>52.0</td>\n",
        "      <td>184.660</td>\n",
        "      <td>-3.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130634</th>\n",
@@ -3442,7 +3442,7 @@
        "      <td>49.0</td>\n",
        "      <td>248.388</td>\n",
        "      <td>-3.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130644</th>\n",
@@ -3508,7 +3508,7 @@
        "      <td>50.0</td>\n",
        "      <td>225.531</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130647</th>\n",
@@ -3640,7 +3640,7 @@
        "      <td>52.0</td>\n",
        "      <td>192.227</td>\n",
        "      <td>-4.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130655</th>\n",
@@ -3684,7 +3684,7 @@
        "      <td>49.0</td>\n",
        "      <td>152.544</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130658</th>\n",
@@ -3728,7 +3728,7 @@
        "      <td>61.0</td>\n",
        "      <td>194.583</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130660</th>\n",
@@ -3750,7 +3750,7 @@
        "      <td>48.0</td>\n",
        "      <td>139.191</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130662</th>\n",
@@ -4133,7 +4133,7 @@
        "130629                           0  \n",
        "130631                           1  \n",
        "130632                           0  \n",
-       "130633                           1  \n",
+       "130633                           0  \n",
        "130634                           1  \n",
        "130635                           1  \n",
        "130636                           1  \n",
@@ -4141,21 +4141,21 @@
        "130639                           1  \n",
        "130640                           1  \n",
        "130641                           0  \n",
-       "130642                           1  \n",
+       "130642                           0  \n",
        "130644                           0  \n",
        "130645                           1  \n",
-       "130646                           1  \n",
+       "130646                           0  \n",
        "130647                           0  \n",
        "130648                           1  \n",
        "130650                           1  \n",
        "130651                           1  \n",
        "130652                           0  \n",
-       "130654                           1  \n",
+       "130654                           0  \n",
        "130655                           1  \n",
-       "130657                           1  \n",
+       "130657                           0  \n",
        "130658                           1  \n",
-       "130659                           1  \n",
-       "130660                           1  \n",
+       "130659                           0  \n",
+       "130660                           0  \n",
        "130662                           1  \n",
        "\n",
        "[115659 rows x 19 columns]"
@@ -4167,7 +4167,7 @@
     }
    ],
    "source": [
-    "data['popularity_maintain/growth'] = np.where((data['popularity_growth'] > -5), 1, 0)\n",
+    "data['popularity_maintain/growth'] = np.where((data['popularity_growth'] >= 0), 1, 0)\n",
     "data"
    ]
   },
@@ -4202,7 +4202,7 @@
     {
      "data": {
       "text/plain": [
-       "0.15526677560760513"
+       "0.37168746055214036"
       ]
      },
      "execution_count": 21,
@@ -4222,7 +4222,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8447332243923948"
+       "0.6283125394478597"
       ]
      },
      "execution_count": 22,
@@ -4295,7 +4295,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8441120525678714"
+       "0.6294310911291717"
       ]
      },
      "execution_count": 25,
@@ -4312,7 +4312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're around the same as the baseline score"
+    "We're around the same as the baseline score, very slightly better."
    ]
   },
   {
@@ -4406,7 +4406,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8436797509942936"
+       "0.6294310911291717"
       ]
      },
      "execution_count": 30,
@@ -4424,7 +4424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not a very great improvement, once again."
+    "Similar result to logistic regression"
    ]
   },
   {
@@ -4436,7 +4436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4451,7 +4451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4479,7 +4479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4488,133 +4488,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 0.48278519\n",
-      "Iteration 2, loss = 0.42348252\n",
-      "Iteration 3, loss = 0.42052363\n",
-      "Iteration 4, loss = 0.41864311\n",
-      "Iteration 5, loss = 0.41771596\n",
-      "Iteration 6, loss = 0.41699973\n",
-      "Iteration 7, loss = 0.41661496\n",
-      "Iteration 8, loss = 0.41610866\n",
-      "Iteration 9, loss = 0.41562937\n",
-      "Iteration 10, loss = 0.41533201\n",
-      "Iteration 11, loss = 0.41499282\n",
-      "Iteration 12, loss = 0.41476776\n",
-      "Iteration 13, loss = 0.41448070\n",
-      "Iteration 14, loss = 0.41434434\n",
-      "Iteration 15, loss = 0.41409124\n",
-      "Iteration 16, loss = 0.41390184\n",
-      "Iteration 17, loss = 0.41377627\n",
-      "Iteration 18, loss = 0.41359768\n",
-      "Iteration 19, loss = 0.41342620\n",
-      "Iteration 20, loss = 0.41326397\n",
-      "Iteration 21, loss = 0.41309982\n",
-      "Iteration 22, loss = 0.41291235\n",
-      "Iteration 23, loss = 0.41286738\n",
-      "Iteration 24, loss = 0.41279371\n",
-      "Iteration 25, loss = 0.41260510\n",
-      "Iteration 26, loss = 0.41249789\n",
-      "Iteration 27, loss = 0.41238442\n",
-      "Iteration 28, loss = 0.41223129\n",
-      "Iteration 29, loss = 0.41225303\n",
-      "Iteration 30, loss = 0.41198213\n",
-      "Iteration 31, loss = 0.41184426\n",
-      "Iteration 32, loss = 0.41184343\n",
-      "Iteration 33, loss = 0.41173812\n",
-      "Iteration 34, loss = 0.41155956\n",
-      "Iteration 35, loss = 0.41133991\n",
-      "Iteration 36, loss = 0.41124043\n",
-      "Iteration 37, loss = 0.41124855\n",
-      "Iteration 38, loss = 0.41129132\n",
-      "Iteration 39, loss = 0.41112788\n",
-      "Iteration 40, loss = 0.41103401\n",
-      "Iteration 41, loss = 0.41109906\n",
-      "Iteration 42, loss = 0.41100730\n",
-      "Iteration 43, loss = 0.41075452\n",
-      "Iteration 44, loss = 0.41084383\n",
-      "Iteration 45, loss = 0.41079000\n",
-      "Iteration 46, loss = 0.41064386\n",
-      "Iteration 47, loss = 0.41062826\n",
-      "Iteration 48, loss = 0.41055661\n",
-      "Iteration 49, loss = 0.41061109\n",
-      "Iteration 50, loss = 0.41053267\n",
-      "Iteration 51, loss = 0.41036428\n",
-      "Iteration 52, loss = 0.41031332\n",
-      "Iteration 53, loss = 0.41028995\n",
-      "Iteration 54, loss = 0.41035875\n",
-      "Iteration 55, loss = 0.41018000\n",
-      "Iteration 56, loss = 0.41018126\n",
-      "Iteration 57, loss = 0.41011983\n",
-      "Iteration 58, loss = 0.41007475\n",
-      "Iteration 59, loss = 0.41003263\n",
-      "Iteration 60, loss = 0.40985797\n",
-      "Iteration 61, loss = 0.40993995\n",
-      "Iteration 62, loss = 0.41005524\n",
-      "Iteration 63, loss = 0.40983509\n",
-      "Iteration 64, loss = 0.40981802\n",
-      "Iteration 65, loss = 0.40976616\n",
-      "Iteration 66, loss = 0.40975479\n",
-      "Iteration 67, loss = 0.40962923\n",
-      "Iteration 68, loss = 0.40965423\n",
-      "Iteration 69, loss = 0.40965922\n",
-      "Iteration 70, loss = 0.40956278\n",
-      "Iteration 71, loss = 0.40957079\n",
-      "Iteration 72, loss = 0.40930770\n",
-      "Iteration 73, loss = 0.40953457\n",
-      "Iteration 74, loss = 0.40946813\n",
-      "Iteration 75, loss = 0.40927392\n",
-      "Iteration 76, loss = 0.40927353\n",
-      "Iteration 77, loss = 0.40919980\n",
-      "Iteration 78, loss = 0.40936824\n",
-      "Iteration 79, loss = 0.40933305\n",
-      "Iteration 80, loss = 0.40903556\n",
-      "Iteration 81, loss = 0.40907221\n",
-      "Iteration 82, loss = 0.40904173\n",
-      "Iteration 83, loss = 0.40902642\n",
-      "Iteration 84, loss = 0.40900285\n",
-      "Iteration 85, loss = 0.40896946\n",
-      "Iteration 86, loss = 0.40886117\n",
-      "Iteration 87, loss = 0.40878644\n",
-      "Iteration 88, loss = 0.40895923\n",
-      "Iteration 89, loss = 0.40880401\n",
-      "Iteration 90, loss = 0.40880330\n",
-      "Iteration 91, loss = 0.40874664\n",
-      "Iteration 92, loss = 0.40875983\n",
-      "Iteration 93, loss = 0.40859837\n",
-      "Iteration 94, loss = 0.40858490\n",
-      "Iteration 95, loss = 0.40862985\n",
-      "Iteration 96, loss = 0.40859412\n",
-      "Iteration 97, loss = 0.40861043\n",
-      "Iteration 98, loss = 0.40849965\n",
-      "Iteration 99, loss = 0.40845126\n",
-      "Iteration 100, loss = 0.40852793\n",
-      "Iteration 101, loss = 0.40848101\n",
-      "Iteration 102, loss = 0.40828489\n",
-      "Iteration 103, loss = 0.40836031\n",
-      "Iteration 104, loss = 0.40847149\n",
-      "Iteration 105, loss = 0.40844764\n",
-      "Iteration 106, loss = 0.40813302\n",
-      "Iteration 107, loss = 0.40830731\n",
-      "Iteration 108, loss = 0.40819019\n",
-      "Iteration 109, loss = 0.40798719\n",
-      "Iteration 110, loss = 0.40799850\n",
-      "Iteration 111, loss = 0.40815560\n",
-      "Iteration 112, loss = 0.40814268\n",
-      "Iteration 113, loss = 0.40802814\n",
-      "Iteration 114, loss = 0.40810271\n",
-      "Iteration 115, loss = 0.40795697\n",
-      "Iteration 116, loss = 0.40798605\n",
-      "Iteration 117, loss = 0.40786243\n",
-      "Iteration 118, loss = 0.40801847\n",
-      "Iteration 119, loss = 0.40784222\n",
-      "Iteration 120, loss = 0.40776896\n",
+      "Iteration 1, loss = 0.66982413\n",
+      "Iteration 2, loss = 0.65116557\n",
+      "Iteration 3, loss = 0.64812672\n",
+      "Iteration 4, loss = 0.64671119\n",
+      "Iteration 5, loss = 0.64562744\n",
+      "Iteration 6, loss = 0.64490645\n",
+      "Iteration 7, loss = 0.64403785\n",
+      "Iteration 8, loss = 0.64351736\n",
+      "Iteration 9, loss = 0.64272403\n",
+      "Iteration 10, loss = 0.64239088\n",
+      "Iteration 11, loss = 0.64182934\n",
+      "Iteration 12, loss = 0.64138237\n",
+      "Iteration 13, loss = 0.64109917\n",
+      "Iteration 14, loss = 0.64087264\n",
+      "Iteration 15, loss = 0.64054720\n",
+      "Iteration 16, loss = 0.64053429\n",
+      "Iteration 17, loss = 0.64017576\n",
+      "Iteration 18, loss = 0.64001694\n",
+      "Iteration 19, loss = 0.64001511\n",
+      "Iteration 20, loss = 0.63973721\n",
+      "Iteration 21, loss = 0.63955868\n",
+      "Iteration 22, loss = 0.63948374\n",
+      "Iteration 23, loss = 0.63946078\n",
+      "Iteration 24, loss = 0.63917205\n",
+      "Iteration 25, loss = 0.63915281\n",
+      "Iteration 26, loss = 0.63903124\n",
+      "Iteration 27, loss = 0.63895344\n",
+      "Iteration 28, loss = 0.63882256\n",
+      "Iteration 29, loss = 0.63885009\n",
+      "Iteration 30, loss = 0.63882855\n",
+      "Iteration 31, loss = 0.63861492\n",
+      "Iteration 32, loss = 0.63855885\n",
+      "Iteration 33, loss = 0.63839807\n",
+      "Iteration 34, loss = 0.63822426\n",
+      "Iteration 35, loss = 0.63832614\n",
+      "Iteration 36, loss = 0.63810362\n",
+      "Iteration 37, loss = 0.63809280\n",
+      "Iteration 38, loss = 0.63792560\n",
+      "Iteration 39, loss = 0.63791504\n",
+      "Iteration 40, loss = 0.63784232\n",
+      "Iteration 41, loss = 0.63775456\n",
+      "Iteration 42, loss = 0.63771644\n",
+      "Iteration 43, loss = 0.63757490\n",
+      "Iteration 44, loss = 0.63768579\n",
+      "Iteration 45, loss = 0.63742822\n",
+      "Iteration 46, loss = 0.63727631\n",
+      "Iteration 47, loss = 0.63739794\n",
+      "Iteration 48, loss = 0.63727535\n",
+      "Iteration 49, loss = 0.63710981\n",
+      "Iteration 50, loss = 0.63709105\n",
+      "Iteration 51, loss = 0.63713432\n",
+      "Iteration 52, loss = 0.63704137\n",
+      "Iteration 53, loss = 0.63710448\n",
+      "Iteration 54, loss = 0.63679885\n",
+      "Iteration 55, loss = 0.63667102\n",
+      "Iteration 56, loss = 0.63687552\n",
+      "Iteration 57, loss = 0.63671413\n",
+      "Iteration 58, loss = 0.63677242\n",
+      "Iteration 59, loss = 0.63651502\n",
+      "Iteration 60, loss = 0.63681612\n",
+      "Iteration 61, loss = 0.63665402\n",
+      "Iteration 62, loss = 0.63647768\n",
+      "Iteration 63, loss = 0.63652472\n",
+      "Iteration 64, loss = 0.63642498\n",
+      "Iteration 65, loss = 0.63636614\n",
+      "Iteration 66, loss = 0.63632338\n",
+      "Iteration 67, loss = 0.63626818\n",
+      "Iteration 68, loss = 0.63618787\n",
+      "Iteration 69, loss = 0.63609739\n",
+      "Iteration 70, loss = 0.63610646\n",
       "Training loss did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n"
      ]
     },
@@ -4630,7 +4580,7 @@
        "       validation_fraction=0.1, verbose=True, warm_start=False)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4641,16 +4591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8435932906795781"
+       "0.6562337886909908"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4664,7 +4614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This isn't doing great either"
+    "So far, this has worked well, with a decent improvement over our baseline score"
    ]
   },
   {
@@ -4676,7 +4626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4691,7 +4641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4699,7 +4649,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:  1.4min finished\n"
+      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:  1.3min finished\n"
      ]
     },
     {
@@ -4713,7 +4663,7 @@
        "            oob_score=False, random_state=0, verbose=1, warm_start=False)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4725,7 +4675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4733,16 +4683,16 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:    1.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:    1.3s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8477001556285665"
+       "0.6545478125540377"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4756,7 +4706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the best model so far. Maybe if we tweak our Neural network parameters we can do better with that."
+    "Neural Networks performed best, but this did pretty well too."
    ]
   }
  ],
