--- a/Spotify Song Popularity Prediction.ipynb
+++ b/Spotify Song Popularity Prediction.ipynb
@@ -29,8 +29,10 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
     "\n",
     "import time\n",
     "import seaborn as sns\n",
@@ -3658,7 +3660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Very very high instrumentalness does not seem to ever be very popular. An instrumentalness of about 10% seems to be a good amount for popular songs."
+    "Very very high speechiness does not seem to ever be very popular. Speechiness of about 10% seems to be a good amount for popular songs."
    ]
   },
   {
@@ -3814,7 +3816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Acousticness vs Popularity**"
+    "**Loudness vs Popularity**"
    ]
   },
   {
